<resources>
    <string name="app_name">Ebook Perpus jateng</string>
    <string name="please_login">Please Login</string>
    <string name="new_user_signup">New User? <b>SignUp</b></string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="xxx_email_com">xxx@email.com</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="add_category">Add Category</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="book_deskripsi">Book Deskripsi</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="the_book_title">The Book Title</string>
    <string name="category">Category</string>
    <string name="_16mb">16MB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="update">Update</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="n_a">N/A</string>
    <string name="ukuran">Ukuran</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal">Tanggal</string>
    <string name="download">Download</string>
    <string name="halaman">Halaman</string>
    <string name="deskripsi_buku">Deskripsi Buku</string>
    <string name="dilihat">Dilihat</string>
    <string name="book_title">Book Title</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="read">Read</string>
    <string name="membaca_buku">Membaca Buku</string>
    <string name="n_n">N/N</string>
    <string name="tombol_kembali">Tombol Kembali</string>
    <string name="_16_mb">16 MB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_ke_favorite">Tambah ke Favorite</string>
    <string name="profile">Profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="account">Account</string>
    <string name="buku_favorite">Buku Favorite</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="the_description_of_the_book">The description of the book</string>
    <string name="tambah_komentar">Tambah Komentar</string>
    <string name="komentar">Komentar</string>
    <string name="submit">SUBMIT</string>
    <string name="person_name">Person name</string>
    <string name="komentar_user">Komentar user</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="belum_verifikasi">Belum Verifikasi</string>
    <string name="account_status">Account Status</string>
</resources>