<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--To show pdf and progress for pdf load-->
    <RelativeLayout
        android:id="@+id/pdfRl"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:background="@color/gray02"
        android:layout_marginEnd="5dp">

        <!--PdfView-->
        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!--ProgressBar: show while pdf is loading-->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <!--TextView: Book title-->
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/book_title"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"/>

        <!--TextView: Book deskripsi-->
        <TextView
            android:id="@+id/descTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/book_deskripsi"
            android:layout_toEndOf="@id/pdfRl"
            android:layout_below="@id/titleTv"
            android:maxLines="4"
            android:layout_marginTop="8dp"
            android:ellipsize="end"/>

        <!--Text: Book Kategori-->
        <TextView
            android:id="@+id/catTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/kategori"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <!--Text: Book size KB/MB/bytes-->
        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16_mb"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:layout_alignParentBottom="true"/>

        <!--TextView: Book added date-->
        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sizeTv"
            android:layout_toStartOf="@id/catTv"
            android:text="@string/dd_mm_yyyy"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>