<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".dashboard.admin.detail.PdfDetailActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/detail_buku" />

        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_buku"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>

    <!--All content under scrollview-->
    <ScrollView
        android:layout_above="@+id/bookOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/toolbarRL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Book Info-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Book Preview-->
                <RelativeLayout
                    android:id="@+id/pdfRl"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <!--PdfView-->
                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <!--Progress Bar-->
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

               <!-- Book Title-->
                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfRl"
                    android:text="@string/book_title"/>

                <!--Table-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTv"
                    android:layout_toEndOf="@+id/pdfRl">

                    <!--Category Row-->
                    <TableRow>
                        <TextView
                            android:id="@+id/categoryLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kategori"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/categoryTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Date Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/dateLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/dateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Size Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/sizeLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ukuran"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/sizeTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Views Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/viewsLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dilihat"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/viewsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Download Count Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/downloadsLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/downloadsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                    <!--Number of Pages Row-->
                    <TableRow
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/pagesLabelTv"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/halaman"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/pagesTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/n_a"
                            android:layout_marginEnd="5dp"/>
                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <!--Book descriptions-->
            <TextView
                android:id="@+id/descTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/deskripsi_buku"
                android:textColor="@color/black"/>
        </LinearLayout>

    </ScrollView>

    <!--Button for under options-->
    <LinearLayout
        android:id="@+id/bookOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/design_default_color_primary">

        <!--Read Book Button-->
        <Button
            android:id="@+id/readBookBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_book_white"
            android:layout_weight="1"/>

        <!--Download Book Button-->
        <Button
            android:id="@+id/downloadBookBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_download_white"
            android:layout_weight="1"/>

        <!--Button: Add/Remove favorite-->
        <Button
            android:id="@+id/favBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_favorite_border_white"
            android:text="@string/tambah_ke_favorite"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>