<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rect01"
    android:padding="20dp">

    <!--Button: goback, dismiss dialog-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_kembali"
        android:background="@android:color/transparent"
        android:padding="5dp"/>

    <!--TextView: Dialog title-->
    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/tambah_komentar"
        android:textColor="@color/purple_700"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <!--TextInputLayout: input comment-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commenTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBtn"
        android:layout_marginTop="20dp"
        android:hint="@string/komentar"
        app:startIconDrawable="@drawable/ic__comment_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/komenEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:inputType="textMultiLine|textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Button add komen-->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commenTil"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@drawable/shape_button01"
        android:textColor="@color/white"/>

</RelativeLayout>