<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".dashboard.profile.ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@drawable/back02"
        android:layout_marginTop="40dp"/>

    <!--Toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--Back Button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"/>

        <!--Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

        <!--Profile edit button-->
        <ImageButton
            android:id="@+id/profEdtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/shape_rect01"/>

    <!--Shapeable ImageView with rounded corners-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileTv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person_gray"
        app:shapeAppearanceOverlay="@style/styleRoundedCornerImage"/>

    <!--Name-->
    <TextView
        android:id="@+id/namaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/nama_lengkap"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <!--Email-->
    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/namaTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/xxx_email_com"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/detailsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTv"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <!--Account-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/akunTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/n_n"
                android:textColor="@color/black" />

        </LinearLayout>

        <!--Member since-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Member"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/memberDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/n_n"
                android:textColor="@color/black" />

        </LinearLayout>

        <!--Favorite Books-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buku_favorite"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/favBookTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/n_n"
                android:textColor="@color/black" />

        </LinearLayout>

        <!--Account Status-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_status"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/accountStatTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/belum_verifikasi"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <!--View: to separate-->
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/detailsLL"
        android:background="@color/gray03"
        android:layout_marginTop="5dp"/>

    <!--TextView: Label-->
    <TextView
        android:id="@+id/favLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buku_favorite"
        android:layout_below="@id/view1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5dp"/>

    <!--Recyclerview: show for book-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favRV"
        android:layout_below="@id/favLabelTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_favorite"/>

</RelativeLayout>